address  is not a known valid target type for the address property.

--- a/_includes/sco.html
+++ b/_includes/sco.html
@@ -9,7 +9,7 @@
   "email": {{ site.email | jsonify }},
   "telephone": {{ site.phone | jsonify }},
   "address": {
-    "@type": "274001",
+    "@type": "PostalAddress",
     "addressLocality": "Deoria",
     "addressRegion": "Uttar Pradesh",
     "addressCountry": "IN"
